@@ -727,7 +727,8 @@ o Sql
     long-compile-time-needing queries, extended columndescriptions,
     accurate error messages under all circumstances, SSL-support,
     SQL-injection protection since it will ignore everything after the
-    first semicolon terminating the first command in the query.
+    first semicolon terminating the first command in the query, integrated
+    statistics.
 
     Performance tuned, with the helperclass _PGsql.PGsql it currently
     is around 21% faster than the old libpq based Postgres driver
